--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@
 ############################
 
 # Name of website
-title: My website
+title: Motion Stories
 
 # Your name to show in the footer
-author: Some Person
+author: Jeremy, Flo and Jackie
 
 ###############################################
 # --- List of links in the navigation bar --- #
